force-app/main/default/objects/Account_to_Field_Support__c/Account_to_Field_Support__c.object-meta.xml
<CustomObject>
    <description>Storing Account Roles Like Primary FSE, Secondary FSE and FSM</description>
    <label>Account to Field Support</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Account Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account to Field Support</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>