force-app/main/default/objects/Account_to_Field_Support__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>DCP-803 Account Related To This Record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Field_Support_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>