force-app/main/default/objects/Account_to_Field_Support__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Flag to Determine field support is active</description>
    <formula>User__r.SVMXC__Active__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>