force-app/main/default/objects/Account_to_Field_Support__c/fields/Download_Account_To_Field_Support_to_Mob__c.field-meta.xml
<CustomField>
    <fullName>Download_Account_To_Field_Support_to_Mob__c</fullName>
    <description>Download account to field support to mob</description>
    <formula>Account__r.Download_Account_To_Mobile_No__c</formula>
    <label>Download Account To Field Support to Mob</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>