force-app/main/default/objects/Account_to_Field_Support__c/fields/Enable_Notifications_For__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notifications_For__c</fullName>
    <description>Internal users can select values for which they want notifications to be sent to A2FS users.</description>
    <inlineHelpText>Select which notifications you want this Field user to receive.</inlineHelpText>
    <label>Enable Notifications For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted> 
        <valueSetDefinition>
            <value> 
                <fullName>Parts Order Notification</fullName>
            </value>
            <value> 
                <fullName>Relocation Work Order Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>