force-app/main/default/objects/Account_to_Field_Support__c/fields/Salesforce_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_ID__c</fullName>
    <description>To get the active salesforce user id to assign the case to user who has role Customer Care Specialist/Field Support Ops Specialist</description>
    <formula>IF( User__r.SVMXC__Active__c  &amp;&amp; User__r.SVMXC__Salesforce_User__r.IsActive, User__r.SVMXC__Salesforce_User__c,&apos;&apos;)</formula>
    <label>Salesforce User ID</label>
    <type>Text</type>
</CustomField>