force-app/main/default/objects/Account_to_Field_Support__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Technician Linked to Customer Solutions record</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SVMXC__Service_Group_Members__c.SVMXC__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Account to Field Support</relationshipLabel>
    <relationshipName>Account_Users</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>