force-app/main/default/objects/Account_to_Field_Support__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <description>Store Role of the Technicians</description>
    <label>User Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Support_User_Role</valueSetName>
    </valueSet>
</CustomField>