force-app/main/default/objects/Account_to_Field_Support__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>User_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>